--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,8 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
-      - gradle fatJar --debug
+      - gradle fatJar
+      - locate -b 'gradle-create-single-jar-all-1.0.jar'
 artifacts:
   files:
     - gradle-create-single-jar-all-1.0.jar
