--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,8 +8,7 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
-      - gradle fatJar
-      - find -name 'gradle-create-single-jar-all-1.0.jar'
+      - gradle build
 artifacts:
   files:
-    - gradle-create-single-jar-all-1.0.jar
+    - build/libs/gradle-create-single-jar-all-1.0.jar
