--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,7 @@ phases:
       - echo Build completed on `date`
       - gradle build
 artifacts:
+  base-directory:
   files:
      - '**/*'
    # - build/libs/gradleproject-1.0.jar
