--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - gradle clean
+      - gradle --version
   post_build:
     commands:
       - echo Build completed on `date`
