--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
+      - docker --version
       - gradle --version
   post_build:
     commands:
